# machine_learning_fundamentals

./: 1.Linear Algebra Intuition.ipynb  Untitled.ipynb  pyproject.toml
.ipynb_checkpoints/: 1.Linear Algebra Intuition-checkpoint.ipynb  main-checkpoint.py
Machine Learning Fundamentals/: DecisionTree&RandomForests.ipynb  Feature Engineering & Selection.ipynb  LinearRegression.ipynb  UnsupervisedLearning.ipynb  ml_intuition.ipynb
Machine Learning Fundamentals/.ipynb_checkpoints/: DecisionTree&RandomForests-checkpoint.ipynb  UnsupervisedLearning-checkpoint.ipynb
Machine Learning Fundamentals/UnsupervisedLearning/: UnsupervisedLearning.ipynb  lesson_notes.md
Math Fundamentals/: 1.Linear Algebra Intuition.ipynb  MatrixOperations.ipynb  MaxtrixTransformations&Eigenvalues.ipynb
Projects/: HomeCreditExperiment.ipynb
Projects/.ipynb_checkpoints/: HomeCreditExperiment-checkpoint.ipynb
