[project]
name = "ml-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "cudf-cu12>=26.6.0",
    "cuml-cu12>=26.6.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "polars>=1.41.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"
